# tink-ffi

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-10-tink-ffi-design.md
testing-server/: Cargo.toml  build.rs
testing-server/src/: lib.rs  main.rs
testing-server/src/services/: aead.rs  daead.rs  hybrid.rs  jwt.rs  keyset.rs  keyset_deriver.rs  mac.rs  metadata.rs  mod.rs  prf.rs  signature.rs  streaming_aead.rs
testing-server/tests/: integration_test.rs
tink-ffi/: Cargo.toml
tink-ffi-sys/: BUILD.bazel  Cargo.toml  README.md  build.rs
tink-ffi-sys/ffi/: CMakeLists.txt
tink-ffi-sys/ffi/include/: tink_ffi.h
tink-ffi-sys/ffi/src/: aead.cc  common.h  config.cc  deterministic_aead.cc  error.cc  hybrid.cc  jwt.cc  key_derivation.cc  keyset.cc  keyset_handle_internal.h  mac.cc  prf.cc  signature.cc  streaming_aead.cc
tink-ffi-sys/src/: lib.rs
tink-ffi/src/: aead.rs  deterministic_aead.rs  error.rs  hybrid.rs  jwt.rs  key_derivation.rs  keyset.rs  lib.rs  mac.rs  prf.rs  signature.rs  streaming_aead.rs
