[package]
name = "testing-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/winstanley-industries/tink-ffi"
publish = false

[lib]
name = "testing_server"
path = "src/lib.rs"

[[bin]]
name = "testing_server"
path = "src/main.rs"

[dependencies]
tink-ffi = { path = "../tink-ffi", version = "0.1" }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
