load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library")

cc_library(
    name = "tink_ffi_cc",
    srcs = glob([
        "ffi/src/*.cc",
        "ffi/src/*.h",
    ]),
    hdrs = ["ffi/include/tink_ffi.h"],
    includes = ["ffi/include"],
    deps = [
        "@tink_cc//tink:tink_cc",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:insecure_secret_key_access",
        # aead
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/aead:aead_key_templates",
        "@tink_cc//tink/aead:config_v0",
        # config
        "@tink_cc//tink/config:global_registry",
        "@tink_cc//tink/config:tink_config",
        # daead
        "@tink_cc//tink/daead:config_v0",
        "@tink_cc//tink/daead:deterministic_aead_key_templates",
        # hybrid
        "@tink_cc//tink/hybrid:config_v0",
        "@tink_cc//tink/hybrid:hpke_config",
        "@tink_cc//tink/hybrid:hybrid_key_templates",
        # json
        "@tink_cc//tink/json:json_keyset_reader",
        "@tink_cc//tink/json:json_keyset_writer",
        # jwt
        "@tink_cc//tink/jwt:jwt_key_templates",
        "@tink_cc//tink/jwt:jwt_mac",
        "@tink_cc//tink/jwt:jwt_mac_config",
        "@tink_cc//tink/jwt:jwt_public_key_sign",
        "@tink_cc//tink/jwt:jwt_public_key_verify",
        "@tink_cc//tink/jwt:jwt_signature_config",
        "@tink_cc//tink/jwt:jwt_validator",
        "@tink_cc//tink/jwt:raw_jwt",
        "@tink_cc//tink/jwt:verified_jwt",
        # keyderivation
        "@tink_cc//tink/keyderivation:key_derivation_config",
        "@tink_cc//tink/keyderivation:key_derivation_key_templates",
        "@tink_cc//tink/keyderivation:keyset_deriver",
        # mac
        "@tink_cc//tink/mac:config_v0",
        "@tink_cc//tink/mac:mac_key_templates",
        # prf
        "@tink_cc//tink/prf:config_v0",
        "@tink_cc//tink/prf:prf_key_templates",
        "@tink_cc//tink/prf:prf_set",
        # signature
        "@tink_cc//tink/signature:config_v0",
        "@tink_cc//tink/signature:signature_key_templates",
        # streaming aead
        "@tink_cc//tink/streamingaead:config_v0",
        "@tink_cc//tink/streamingaead:streaming_aead_key_templates",
        # util
        "@tink_cc//tink/util:istream_input_stream",
        "@tink_cc//tink/util:ostream_output_stream",
    ],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "tink_ffi_sys",
    srcs = ["src/lib.rs"],
    crate_name = "tink_ffi_sys",
    edition = "2021",
    deps = [":tink_ffi_cc"],
    visibility = ["//visibility:public"],
)
