[package]
name = "tink-ffi"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/winstanley-industries/tink-ffi"
description = "Safe Rust bindings to Google Tink cryptography library"
readme = "README.md"

[dependencies]
tink-ffi-sys = { path = "../tink-ffi-sys", version = "0.1" }
serde_json = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
